# funnelctl

./: .gitignore  AGENTS.md  Cargo.toml  SPEC.md
src/: cli.rs  dirs.rs  error.rs  lib.rs  lock.rs  main.rs  output.rs
src/backend/: mod.rs
src/backend/localapi/: client.rs  mod.rs
src/cmd/: close.rs  completions.rs  doctor.rs  mod.rs  open.rs  status.rs
src/core/: lease.rs  mod.rs  patch.rs  spec.rs  types.rs  validation.rs
src/net/: localapi_transport.rs  mod.rs
tests/: patch_tests.rs  validation_tests.rs
